[package]
name = "anchor-sola"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_sola"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = []
default = ["cpi"]

[dependencies]
anchor-lang = { version = "0.29", features = ["init-if-needed"], git = "https://github.com/coral-xyz/anchor.git" }
anchor-spl = { version = "0.29", features = ["metadata"], git = "https://github.com/coral-xyz/anchor.git" }
mpl-token-metadata = "4.1"
